implemented combat system

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script defer src="js/textNodes.js"></script>
     <script defer src="js/devConsole.js"></script>
     <script defer src="js/optionSelection.js"></script>
-    <script defer src="js/combat"></script>
+    <script defer src="js/combat.js"></script>
     <script defer src="js/npc.js"></script>
 
 
